# abcount

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO  pyproject.toml
abcount/: __init__.py  _definitions.py  components.py  model.py
abcount/components/: ions.py  isoelectric.py
abcount/data/: acid_definitions.json  base_definitions.json  raw_definitions.json
abcount/model/: classifier.py  ions.py
tests/: _match.py  _report.py  chembl_example_1.csv  smarts.py  test_counter.py  test_ions.py  test_isoelectric.py  validation.py  validation_report.ipynb
tests/cache/: placeholder
